--- a/collated/main/A0141872E.md
+++ b/collated/main/A0141872E.md
@@ -25,36 +25,18 @@ public class MenuBarPanelSelectionChangedEvent extends BaseEvent {
 ```
 ###### /java/seedu/taskit/logic/commands/EditCommand.java
 ``` java
-import java.util.List;
-import java.util.Optional;
-
-import seedu.taskit.commons.core.EventsCenter;
-import seedu.taskit.commons.core.Messages;
-import seedu.taskit.commons.events.ui.JumpToListRequestEvent;
-import seedu.taskit.commons.exceptions.IllegalValueException;
-import seedu.taskit.commons.util.CollectionUtil;
-import seedu.taskit.logic.commands.exceptions.CommandException;
-import seedu.taskit.model.tag.UniqueTagList;
-import seedu.taskit.model.task.Date;
-import seedu.taskit.model.task.Priority;
-import seedu.taskit.model.task.ReadOnlyTask;
-import seedu.taskit.model.task.Task;
-import seedu.taskit.model.task.Title;
-import seedu.taskit.model.task.UniqueTaskList;
-
 /**
  * Edits an existing task in TaskIt.
  */
 public class EditCommand extends Command {
 
     public static final String COMMAND_WORD = "edit";
-    public static final String COMMAND_WORD_ALIAS = "e";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Edits the details of the task identified "
             + "by the index number used in the last task listing. "
             + "Existing values will be overwritten by the input values.\n"
-            + "Parameters: INDEX (must be a positive integer) [title|deadline|tag|priority] NEW.\n"
-            + "Example: " + COMMAND_WORD + " or" + COMMAND_WORD_ALIAS + " 2 title finish SWE HW";
+            + "Parameters: INDEX (must be a positive integer) [title|from|to|tag|priority] NEW.\n"
+            + "Example: " + COMMAND_WORD + " 2 title finish SWE HW";
 
     public static final String MESSAGE_EDIT_TASK_SUCCESS = "Edited Task:  %1$s";
     public static final String MESSAGE_NOT_EDITED = "At least one field to edit must be provided.";
@@ -124,7 +106,9 @@ public class EditCommand extends Command {
         Priority updatedPriority = editTaskDescriptor.getPriority().orElseGet(taskToEdit::getPriority);
         UniqueTagList updatedTags = editTaskDescriptor.getTags().orElseGet(taskToEdit::getTags);
 
-        return new Task(updatedTask, updatedStart, updatedEnd, updatedPriority, updatedTags);
+        Task newTask = new Task(updatedTask, updatedStart, updatedEnd, updatedPriority, updatedTags);
+        newTask.setOverdue();
+        return newTask;
     }
 
     /**
@@ -210,7 +194,6 @@ public class EditCommand extends Command {
 public class ListCommand extends Command {
 
     public static final String COMMAND_WORD = "list";
-    public static final String COMMAND_WORD_ALIAS = "l";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": List all the existing tasks in TaskIt \n"
             + "Parameters: [all, done, undone, overdue, today,low,medium,high]\n"
@@ -236,28 +219,24 @@ public class ListCommand extends Command {
 
         int taskListSize;
         switch (parameter) {
-              case LIST_ALL:
-                  model.updateFilteredListToShowAll();
-                  return new CommandResult(MESSAGE_SUCCESS_ALL);
+        case LIST_ALL:
+            model.updateFilteredListToShowAll();
+            return new CommandResult(MESSAGE_SUCCESS_ALL);
 
-              case LIST_TODAY:
-                  taskListSize=model.updateFilteredTaskList(parameter);
-                  assert(taskListSize>=0);
-                  if(taskListSize==0){
-                      return new CommandResult(MESSAGE_NO_TASK_TODAY);
-                  }
-                  return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
+        case LIST_TODAY:
+            taskListSize = model.updateFilteredTaskList(parameter);
+            if(taskListSize == 0){
+                return new CommandResult(MESSAGE_NO_TASK_TODAY);
+            }
+            return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
 
-              default:
-                  model.updateFilteredTaskList(parameter);
-                  return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
+        default:
+            model.updateFilteredTaskList(parameter);
+            return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
         }
     }
 
-    @Override
-    public String toString() {
-        return null;
-    }
+
 
 
 ```
@@ -269,7 +248,6 @@ public class ListCommand extends Command {
 public class MarkCommand extends Command {
 
     public static final String COMMAND_WORD = "mark";
-    public static final String COMMAND_WORD_ALIAS = "m";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Mark a existing tasks in TaskIt based on index\n"
             + "Parameters: [done,undone]\n"
@@ -301,26 +279,13 @@ public class MarkCommand extends Command {
         }
 
         ReadOnlyTask taskToMark = lastShownList.get(filteredTaskListIndex);
-
-        if(!checkDuplicateMarking(taskToMark)) {
-            taskToMark.setDone(parameter);
-        } else{
-            return new CommandResult(String.format(MESSAGE_DUPLICATE_MARKING,parameter));
+        try {
+            model.markTask(taskToMark,parameter);
+        } catch (UniqueTaskList.DuplicateMarkingException e) {
+            throw new CommandException(String.format(MarkCommand.MESSAGE_DUPLICATE_MARKING, parameter));
         }
         EventsCenter.getInstance().post(new JumpToListRequestEvent(filteredTaskListIndex));
-        //TODO find a better way to show it
-        model.updateFilteredTaskList("undone");
         return new CommandResult(String.format(MESSAGE_SUCCESS_ALL, parameter));
-    }
-
-    public Boolean checkDuplicateMarking(ReadOnlyTask taskToMark) {
-        if(parameter.equals("done") && taskToMark.isDone() == true){
-            return true;
-        } else if(parameter.equals("undone") && taskToMark.isDone() == false){
-            return true;
-        } else {
-            return false;
-        }
     }
 }
 ```
@@ -338,20 +303,20 @@ public class EditCommandParser {
     public Command parse(String args) {
         assert args != null;
         ArgumentTokenizer argsTokenizer =
-                new ArgumentTokenizer(PREFIX_TITLE, PREFIX_START, PREFIX_END, PREFIX_PRIORITY, PREFIX_TAG);
+                new ArgumentTokenizer(PREFIX_TITLE, PREFIX_FROM, PREFIX_TO, PREFIX_PRIORITY, PREFIX_TAG);
         argsTokenizer.tokenize(args);
         List<Optional<String>> preambleFields = ParserUtil.splitPreamble(argsTokenizer.getPreamble().orElse(""), 2);
 
         Optional<Integer> index = preambleFields.get(0).flatMap(ParserUtil::parseIndex);
         if (!index.isPresent()) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_NOT_EDITED));
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
         }
 
         EditTaskDescriptor editTaskDescriptor = new EditTaskDescriptor();
         try {
                 editTaskDescriptor.setTitle(ParserUtil.parseTitle(argsTokenizer.getValue(PREFIX_TITLE)));
-                editTaskDescriptor.setStart(ParserUtil.parseDate(argsTokenizer.getValue(PREFIX_START)));
-                editTaskDescriptor.setEnd(ParserUtil.parseDate(argsTokenizer.getValue(PREFIX_END)));
+                editTaskDescriptor.setStart(ParserUtil.parseDate(argsTokenizer.getValue(PREFIX_FROM)));
+                editTaskDescriptor.setEnd(ParserUtil.parseDate(argsTokenizer.getValue(PREFIX_TO)));
                 editTaskDescriptor.setPriority(ParserUtil.parsePriority(argsTokenizer.getValue(PREFIX_PRIORITY)));
                 editTaskDescriptor.setTags(parseTagsForEdit(ParserUtil.toSet(argsTokenizer.getAllValues(PREFIX_TAG))));
         }catch (IllegalValueException ive) {
@@ -384,19 +349,22 @@ public class EditCommandParser {
 ```
 ###### /java/seedu/taskit/logic/parser/ListCommandParser.java
 ``` java
+/**
+ * Parses input arguments and creates a new ListCommand object
+ */
 public class ListCommandParser {
 
     //TODO think a better way to do this
     private static final List<String> PARAMETERS = Arrays.asList(LIST_ALL,LIST_DEADLINE, LIST_FLOATING, LIST_EVENT,
-            LIST_TODAY, LIST_OVERDUE, LIST_PRIORITY_LOW, LIST_PRIORITY_MEDIUM, LIST_PRIORITY_HIGH,LIST_DONE,LIST_UNDONE);
+            LIST_TODAY, LIST_OVERDUE, LIST_PRIORITY_LOW, LIST_PRIORITY_MEDIUM, LIST_PRIORITY_HIGH,DONE,UNDONE);
 
     public Command parse(String args) {
-        Optional<String> parameters = Optional.of(args);
-        if (!parameters.isPresent()) {
+        Optional<String> parseParameter = Optional.of(args);
+        if (!parseParameter.isPresent()) {
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
         }
-        String parameter = parameters.get().trim();
+        String parameter = parseParameter.get().trim().toLowerCase();
         if(!isValidParameter(parameter)){
             return new IncorrectCommand(
                     String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
@@ -406,6 +374,34 @@ public class ListCommandParser {
 
     private boolean isValidParameter(String parameter) {
         return PARAMETERS.contains(parameter);
+    }
+}
+```
+###### /java/seedu/taskit/logic/parser/MarkCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new MarkCommand object
+ */
+public class MarkCommandParser {
+
+    public Command parse(String args) {
+        List<Optional<String>> markInformation = ParserUtil.splitPreamble(args.trim().toLowerCase(),2);
+
+        Optional<Integer> index = markInformation.get(0).flatMap(ParserUtil::parseIndex);
+        if (!index.isPresent()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_NOT_MARKED));
+        }
+
+        Optional<String> parameter = markInformation.get(1).flatMap(ParserUtil::parseParameter);
+        if (!parameter.isPresent()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_NOT_MARKED));
+        }
+
+        if(parameter.get().equals(DONE)||parameter.get().equals(UNDONE)){
+            return new MarkCommand (index.get(), parameter.get());
+        } else {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
+        }
     }
 }
 ```
@@ -423,12 +419,20 @@ public class ListCommandParser {
         return Optional.of(parameter);
 
 ```
-###### /java/seedu/taskit/model/Model.java
+###### /java/seedu/taskit/model/ModelManager.java
 ``` java
-    /** Updates the filter of the filtered task list to filter by the given parameter*/
-    int updateFilteredTaskList(String parameter);
+    public void updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
+            throws UniqueTaskList.DuplicateTaskException {
+        assert editedTask != null;
 
+        int taskManagerIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        taskManager.updateTask(taskManagerIndex, editedTask);
+        indicateAddressBookChanged();
+    }
 
+    public void markTask(ReadOnlyTask taskToMark, String parameter) throws DuplicateMarkingException {
+        taskManager.markTask(taskToMark, parameter);
+        indicateAddressBookChanged();
 ```
 ###### /java/seedu/taskit/model/ModelManager.java
 ``` java
@@ -459,34 +463,34 @@ public class ListCommandParser {
         @Override
         public boolean run(ReadOnlyTask task) {
             switch (parameter){
-                case LIST_DONE:
-                    return task.isDone();
+            case DONE:
+                return task.isDone();
 
-                case LIST_UNDONE:
-                    return !task.isDone();
+            case UNDONE:
+                return !task.isDone();
 
-                case LIST_OVERDUE:
-                    return task.isOverdue() && !task.isDone();
+            case LIST_OVERDUE:
+                return task.isOverdue() && !task.isDone();
 
-                case LIST_PRIORITY_LOW:
-                case LIST_PRIORITY_MEDIUM:
-                case LIST_PRIORITY_HIGH:
-                    return task.getPriority().toString().equals(parameter);
+            case LIST_PRIORITY_LOW:
+            case LIST_PRIORITY_MEDIUM:
+            case LIST_PRIORITY_HIGH:
+                return task.getPriority().toString().equals(parameter);
 
-                case LIST_TODAY:
-                    return !task.isDone() && task.getEnd().isDateEqualCurrentDate();
+            case LIST_TODAY:
+                return !task.isDone() && task.getEnd().isDateEqualCurrentDate();
 
-                case LIST_FLOATING:
-                    return task.isFloating();
+            case LIST_FLOATING:
+                return !task.isDone() && task.isFloating();
 
-                case LIST_EVENT:
-                    return task.isEvent();
+            case LIST_EVENT:
+                return !task.isDone() && task.isEvent();
 
-                case LIST_DEADLINE:
-                    return task.isDeadline();
+            case LIST_DEADLINE:
+                return !task.isDone() && task.isDeadline();
 
-                default:
-                    return false;
+            default:
+                return false;
             }
         }
 
@@ -512,8 +516,6 @@ public class ListCommandParser {
             return true;
         }
         return false;
-    }
-
 ```
 ###### /java/seedu/taskit/model/task/Task.java
 ``` java
@@ -523,7 +525,7 @@ public class ListCommandParser {
     }
 
     public void setDone(String status) {
-        if(status.equals("done")) {
+        if(status.equals(DONE)) {
             isDone = true;
         } else {
             isDone = false;
@@ -536,7 +538,8 @@ public class ListCommandParser {
 
     @Override
     public boolean isOverdue() {
-        return checkOverdue();
+        setOverdue();
+        return isOverdue;
     }
 
     private boolean checkOverdue() {
@@ -556,9 +559,50 @@ public class ListCommandParser {
     @Override
     public boolean isDeadline() {
         return this.start.date == null && this.end.date != null;
+    }
+}
+```
+###### /java/seedu/taskit/model/task/UniqueTaskList.java
+``` java
+    /**
+     * Mark the task in the list {@code taskToMark} with {@code parameter}.
+     *
+     * @throws DuplicateMarkingException if task is already be marked as done or undone
+     * @throws IndexOutOfBoundsException if {@code index} < 0 or >= the size of the list.
+     */
+    public void markTask(ReadOnlyTask taskToMark,String parameter)
+            throws UniqueTaskList.DuplicateMarkingException {
+        assert taskToMark != null;
+
+        int index = internalList.indexOf(taskToMark);
+        Task targetTask = internalList.get(index);
+
+        if((taskToMark.isDone() == true && parameter.equals(DONE))
+                ||(taskToMark.isDone() == false && parameter.equals(UNDONE))) {
+            throw new DuplicateMarkingException();
+        }
+
+        targetTask.setDone(parameter);
+        internalList.set(index, targetTask);
+        sortTasks();
+```
+###### /java/seedu/taskit/model/TaskManager.java
+``` java
+    /**
+     * Mark the task in the list {@code taskToMark} with {@code parameter}.
+     *
+     * @throws DuplicateMarkingException if the task is already be marked as done or undone.
+     * @throws IndexOutOfBoundsException if {@code index} < 0 or >= the size of the list.
+     */
+    public void markTask(ReadOnlyTask taskToMark, String parameter)
+            throws UniqueTaskList.DuplicateMarkingException {
+        tasks.markTask(taskToMark, parameter);
 ```
 ###### /java/seedu/taskit/ui/CommandBox.java
 ``` java
+    /**
+     * display the relevant task lists based on the MenuBarSelectionChanged Event parameter
+     */
     public void handleMenuBarSelectionChanged(String parameter) {
         try {
             String command = changeToListCommandFormat(parameter);
@@ -573,6 +617,9 @@ public class ListCommandParser {
         }
     }
 
+    /**
+     * change the parameter into correct ListCommand format
+     */
     private String changeToListCommandFormat(String parameter) {
         switch (parameter) {
 
@@ -649,26 +696,26 @@ public class MenuBarPanel extends UiPart<Region> {
     private static final String FXML = "MenuBarPanel.fxml";
 
     public static final String MENU_HOME = "Home";
+    public static final String MENU_TODAY_TASK = "Today";
+    public static final String MENU_OVERDUE_TASK = "Overdue";
     public static final String MENU_FLOATING_TASK = "Simple Tasks";
     public static final String MENU_EVENT_TASK = "Event";
     public static final String MENU_DEADLINE_TASK = "Deadline";
-    public static final String MENU_TODAY_TASK = "Today";
-    public static final String MENU_OVERDUE_TASK = "Overdue";
 
     private static final String HOME_ICON_PATH = "/images/home_icon.png";
+    private static final String TODAY_TASK_ICON_PATH = "/images/today_icon.png";
+    private static final String OVERDUE_TASK_ICON_PATH = "/images/overdue_icon.png";
     private static final String FLOATING_TASK_ICON_PATH = "/images/floatingtask_icon.png";
     private static final String EVENT_TASK_ICON_PATH = "/images/event_icon.png";
     private static final String DEADLINE_TASK_ICON_PATH = "/images/deadline_icon.png";
-    private static final String TODAY_TASK_ICON_PATH = "/images/today_icon.png";
-    private static final String TODAY_OVERDUE_ICON_PATH = "/images/overdue_icon.png";
 
     @FXML
     private ListView<String> menuBarView;
 
-    private final ObservableList<String> menuBarItems = FXCollections.observableArrayList(MENU_HOME,MENU_FLOATING_TASK,
-            MENU_EVENT_TASK, MENU_DEADLINE_TASK, MENU_TODAY_TASK,MENU_OVERDUE_TASK);
-    private final String[] iconPaths = {HOME_ICON_PATH,FLOATING_TASK_ICON_PATH,EVENT_TASK_ICON_PATH, DEADLINE_TASK_ICON_PATH,
-            TODAY_TASK_ICON_PATH,TODAY_OVERDUE_ICON_PATH};
+    private final ObservableList<String> menuBarItems = FXCollections.observableArrayList(MENU_HOME, MENU_TODAY_TASK,
+            MENU_OVERDUE_TASK, MENU_FLOATING_TASK, MENU_EVENT_TASK, MENU_DEADLINE_TASK);
+    private final String[] iconPaths = {HOME_ICON_PATH, TODAY_TASK_ICON_PATH, OVERDUE_TASK_ICON_PATH,
+            FLOATING_TASK_ICON_PATH, EVENT_TASK_ICON_PATH, DEADLINE_TASK_ICON_PATH};
 
     public MenuBarPanel(AnchorPane menuBarPanelPlaceholder) {
         super(FXML);
@@ -799,9 +846,9 @@ public class MenuBarPanel extends UiPart<Region> {
                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
            </padding>
        </AnchorPane>
-      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.1" VBox.vgrow="ALWAYS">
+      <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="menuBarView" prefWidth="130.0">
+            <VBox fx:id="menuBar" prefWidth="130.0">
                <padding>
          			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          		</padding>
