--- a/collated/main/A0163996J.md
+++ b/collated/main/A0163996J.md
@@ -7,12 +7,16 @@ package seedu.taskit.logic.commands;
 import java.util.HashSet;
 import java.util.Set;
 
+import seedu.taskit.commons.core.EventsCenter;
+import seedu.taskit.commons.core.UnmodifiableObservableList;
+import seedu.taskit.commons.events.ui.JumpToListRequestEvent;
 import seedu.taskit.commons.exceptions.IllegalValueException;
 import seedu.taskit.logic.commands.exceptions.CommandException;
 import seedu.taskit.model.tag.Tag;
 import seedu.taskit.model.tag.UniqueTagList;
 import seedu.taskit.model.task.Date;
 import seedu.taskit.model.task.Priority;
+import seedu.taskit.model.task.ReadOnlyTask;
 import seedu.taskit.model.task.Task;
 import seedu.taskit.model.task.Title;
 import seedu.taskit.model.task.UniqueTaskList;
@@ -60,6 +64,9 @@ public class AddCommand extends Command {
         assert model != null;
         try {
             model.addTask(toAdd);
+
+            UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+            EventsCenter.getInstance().post(new JumpToListRequestEvent(lastShownList.indexOf(toAdd)));
             return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
         } catch (UniqueTaskList.DuplicateTaskException e) {
             throw new CommandException(MESSAGE_DUPLICATE_TASK);
@@ -67,6 +74,12 @@ public class AddCommand extends Command {
 
     }
 
+    @Override
+    public boolean isUndoable() {
+        return true;
+    }
+
+}
 ```
 ###### /java/seedu/taskit/logic/parser/AddCommandParser.java
 ``` java
@@ -317,6 +330,8 @@ public class Priority {
             .append(getStart() + " ")
             .append("End: ")
             .append(getEnd() + " ")
+            .append("Priority: ")
+            .append(getPriority()+" ")
                 .append(" Tags: ");
         getTags().forEach(builder::append);
         return builder.toString();
@@ -335,6 +350,7 @@ import seedu.taskit.commons.exceptions.IllegalValueException;
 import seedu.taskit.model.tag.UniqueTagList;
 import seedu.taskit.model.task.Date;
 import static seedu.taskit.commons.core.Messages.MESSAGE_INVALID_START_DATE;
+import static seedu.taskit.logic.parser.CliSyntax.DONE;
 
 public class Task implements ReadOnlyTask, Comparable<Task>{
 
@@ -586,6 +602,9 @@ import seedu.taskit.commons.exceptions.DuplicateDataException;
 import seedu.taskit.commons.util.CollectionUtil;
 import seedu.taskit.model.task.Task;
 
+import static seedu.taskit.logic.parser.CliSyntax.DONE;
+import static seedu.taskit.logic.parser.CliSyntax.UNDONE;
+
 /**
  * A list of tasks that enforces uniqueness between its elements and does not allow nulls.
  *
@@ -689,6 +708,15 @@ public class UniqueTaskList implements Iterable<Task> {
     public static class DuplicateTaskException extends DuplicateDataException {
         protected DuplicateTaskException() {
             super("Operation would result in duplicate tasks");
+        }
+    }
+
+    /**
+     * Signals that an mark operation want to mark an done task as done or undone task as undone.
+     */
+    public static class DuplicateMarkingException extends DuplicateDataException {
+        protected DuplicateMarkingException() {
+            super("This task is alreadly marked");
         }
     }
 
