--- a/collated/test/A0097141H.md
+++ b/collated/test/A0097141H.md
@@ -11,19 +11,14 @@
     @Test
     public void list_doneTasks_Success() {
 		commandBox.runCommand("mark 6 done");
-		commandBox.runCommand("mark 6 done");
 		commandBox.runCommand("list done");
 		assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "done"));
-		assertListResult(td.cleaning,td.gymming);
+		assertListResult(td.cleaning);
     }
 
-    @Test
-    public void list_undoneTasks_Success() {
-		commandBox.runCommand("list undone");
-		assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "undone"));
-		assertListResult(td.hw1,td.hw2,td.lunch,td.interview,td.shopping);
-    }
-
+```
+###### /java/guitests/ListCommandTest.java
+``` java
     @Test
     public void list_todayTasks_Success() {
         //no task for today
@@ -42,12 +37,20 @@
     public void list_overdueTasks_Success() {
 		commandBox.runCommand("add task3 by 04/04/17");
 		commandBox.runCommand("list overdue");
-		assertListSize(2); //because task1 has just been overdue.
+		assertListSize(1);
 		assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "overdue"));
+    }
+
+	private void assertListResult(TestTask... expectedHits) {
+        assertListSize(expectedHits.length);
+        Arrays.sort(expectedHits);
+        assertTrue(taskListPanel.isListMatching(expectedHits));
+    }
+}
 ```
 ###### /java/guitests/MarkCommandTest.java
 ``` java
-public class MarkCommandTest extends AddressBookGuiTest {
+public class MarkCommandTest extends TaskManagerGuiTest {
 
 	@Test
 	public void mark() {
@@ -110,15 +113,6 @@ public class MarkCommandTest extends AddressBookGuiTest {
     }
 
 }
-```
-###### /java/seedu/taskit/testutil/TypicalTestTasks.java
-``` java
-            cleaning = new TaskBuilder().withTitle("Clean room")
-                    .withPriority("low")
-                    .withTags("home").withDone("done").build();
-            gymming = new TaskBuilder().withTitle("Go to the gym")
-                    .withPriority("low")
-                    .withTags("health").withDone("done").build();
 ```
 ###### /java/seedu/taskit/testutil/TypicalTestTasks.java
 ``` java
