--- a/collated/test/A0141011J.md
+++ b/collated/test/A0141011J.md
@@ -39,7 +39,7 @@ import org.junit.Test;
 import seedu.taskit.testutil.TestTask;
 import seedu.taskit.testutil.TestUtil;
 
-public class DeleteCommandTest extends AddressBookGuiTest {
+public class DeleteCommandTest extends TaskManagerGuiTest {
 
     @Test
     public void delete() {
@@ -88,33 +88,178 @@ public class DeleteCommandTest extends AddressBookGuiTest {
 
 }
 ```
-###### /java/seedu/taskit/model/task/TitleTest.java
+###### /java/guitests/SelectCommandTest.java
 ``` java
-package seedu.taskit.model.task;
+public class SelectCommandTest extends TaskManagerGuiTest {
 
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-
-import org.junit.Test;
-
-import seedu.taskit.model.task.Title;
-
-public class TitleTest {
 
     @Test
-    public void isValidTitle() {
-        // invalid name
-        assertFalse(Title.isValidTitle("")); // empty string
-        assertFalse(Title.isValidTitle(" ")); // spaces only
-        assertFalse(Title.isValidTitle("^")); // only non-alphanumeric characters
-        assertFalse(Title.isValidTitle("peter*")); // contains non-alphanumeric characters
+    public void selectTask_invalidIndex() {
+        assertSelectionInvalid(100); // invalid index
+        assertNoTaskSelected();
 
-        // valid name
-        assertTrue(Title.isValidTitle("meeting")); // alphabets only
-        assertTrue(Title.isValidTitle("12345")); // numbers only
-        assertTrue(Title.isValidTitle("CS2103 Homework")); // alphanumeric characters
-        assertTrue(Title.isValidTitle("SE Meeting")); // with capital letters
-        assertTrue(Title.isValidTitle("Interview for summer internship at NUS")); // long title
+        commandBox.runCommand("select -1"); // negative index
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT, SelectCommand.MESSAGE_USAGE));
+        assertNoTaskSelected();
+    }
+
+    @Test
+    public void selectTask_incorrectCommand() {
+        //Invalid command input
+        commandBox.runCommand("select hw");
+        assertResultMessage(String.format(Messages.MESSAGE_INVALID_COMMAND_FORMAT,SelectCommand.MESSAGE_USAGE));
+        assertNoTaskSelected();
+    }
+
+    @Test
+    public void selectTask_nonEmptyList_success() {
+
+        assertSelectionSuccess(1); // first task in the list
+        int taskCount = td.getTypicalTasks().length;
+        assertSelectionSuccess(taskCount); // last task in the list
+        int middleIndex = taskCount / 2;
+        assertSelectionSuccess(middleIndex); // a task in the middle of the list
+
+        assertSelectionInvalid(taskCount + 1); // invalid index
+        assertTaskSelected(middleIndex); // assert previous selection remains
+
+        /* Testing other invalid indexes such as -1 should be done when testing the SelectCommand */
+    }
+
+    @Test
+    public void selectTask_emptyList() {
+        commandBox.runCommand("clear");
+        assertListSize(0);
+        assertSelectionInvalid(1); //invalid index
+    }
+
+    private void assertSelectionInvalid(int index) {
+        commandBox.runCommand("select " + index);
+        assertResultMessage(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+    }
+
+    private void assertSelectionSuccess(int index) {
+        commandBox.runCommand("select " + index);
+        ReadOnlyTask task = taskListPanel.getTask(index - 1);
+        String expectedMsg = String.format(SelectCommand.MESSAGE_SELECT_TASK_SUCCESS, task.getTitle());
+        assertResultMessage(expectedMsg);
+        assertTaskSelected(index);
+    }
+
+    private void assertTaskSelected(int index) {
+        assertEquals(taskListPanel.getSelectedTasks().size(), 1);
+        ReadOnlyTask selectedTask = taskListPanel.getSelectedTasks().get(0);
+        assertEquals(taskListPanel.getTask(index - 1), selectedTask);
+    }
+
+    private void assertNoTaskSelected() {
+        assertEquals(taskListPanel.getSelectedTasks().size(), 0);
+    }
+
+}
+```
+###### /java/guitests/UndoCommandTest.java
+``` java
+public class UndoCommandTest extends TaskManagerGuiTest{
+
+    @Test
+    public void undo_noPreviousCommand_error() {
+        //relaunch the app
+        commandBox.runCommand("undo");
+        assertResultMessage(MESSAGE_NO_PREVIOUS_STATE);
+    }
+
+    @Test
+    public void undo_lastOneModification_success() {
+        TestTask[] currentList = td.getTypicalTasks();
+        Arrays.sort(currentList);
+
+        //undo add command
+        TestTask taskToAdd = td.assignment;
+        commandBox.runCommand(taskToAdd.getAddCommand());
+        assertListSize(currentList.length + 1);
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+        assertTrue(taskListPanel.isListMatching(currentList));
+
+        //undo delete comand
+        commandBox.runCommand("delete 1");
+        assertListSize(currentList.length - 1);
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+        assertTrue(taskListPanel.isListMatching(currentList));
+
+        //undo clear command
+        commandBox.runCommand("clear");
+        assertListSize(0);
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+        assertTrue(taskListPanel.isListMatching(currentList));
+
+        //undo find command
+        commandBox.runCommand("find HW");
+        assertListSize(2);
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+        assertTrue(taskListPanel.isListMatching(currentList));
+
+        //undo list command
+        commandBox.runCommand("list all");
+        assertListSize(currentList.length);
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+        assertTrue(taskListPanel.isListMatching(currentList));
+    }
+
+    @Test
+    public void undo_multipleModifications_success() {
+        TestTask[] currentList = td.getTypicalTasks();
+        Arrays.sort(currentList);
+
+        /* Integration tests:
+         * Sequentially execute the following command:
+         * - add
+         * - delete
+         * - mark
+         * - list
+         * - clear
+         *
+         *
+         **/
+
+        //add a task
+        TestTask taskToAdd = td.assignment;
+        commandBox.runCommand(taskToAdd.getAddCommand());
+        assertListSize(currentList.length + 1);
+
+        //delete a task
+        commandBox.runCommand("delete 1");
+        assertListSize(currentList.length);
+
+        //find hw
+        commandBox.runCommand("find hw");
+        assertListSize(2);
+
+        //clear the task manager
+        commandBox.runCommand("clear");
+        assertListSize(0);
+
+        //undo clear
+        commandBox.runCommand("undo");
+        assertListSize(2);
+
+        //undo find
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length);
+
+        //undo delete
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length + 1);
+
+        //undo add
+        commandBox.runCommand("undo");
+        assertListSize(currentList.length );
+        assertTrue(taskListPanel.isListMatching(currentList));
     }
 }
 ```
