--- a/collated/test/A0141872E.md
+++ b/collated/test/A0141872E.md
@@ -1,68 +1,84 @@
 # A0141872E
-###### /java/guitests/EditCommandTest.java
+###### /java/guitests/AddCommandTest.java
 ``` java
+    public void add_keyWords_Success() {
+        assertKeywordsSuccess("add priority low tag leisure \"today movie night\"", td.today);
+        assertKeywordsSuccess("add priority low \"to\" tag testing", td.to);
+        assertKeywordsSuccess("add priority low tag testing \"from\" to 3pm", td.from);
 
-    @Test
-    public void edit_allFieldsSpecified_success() throws Exception {
-        sortTasksList();
-        String detailsToEdit = "title Do Homework";
-        int addressBookIndex = 3;
-
-        TestTask editedTask = new TaskBuilder().withTitle("Do Homework").withPriority("medium").withTags("school").build();
-
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
     }
 
-    @Test
-    public void edit_multipleFields_Success() throws Exception {
-        String detailsToEdit = "title Do Homework start 4pm end 6pm priority low tag assignment";
-        int addressBookIndex = 3;
-
-        TestTask editedTask = new TaskBuilder().withTitle("Do Homework").withStart("4pm").withEnd("6pm").withPriority("low").withTags("assignment").build();
-
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
+    private void assertKeywordsSuccess(String detailToAdd, TestTask taskToAdd) {
+        commandBox.runCommand("clear");
+        commandBox.runCommand(detailToAdd);
+        assertTaskExistedSuccess(taskToAdd);
     }
 
-    @Test
-    public void edit_multipleTags_Success() throws Exception {
-        String detailsToEdit = "tag assignment tag school tag work";
-        int addressBookIndex = 3;
+    private void assertAddSuccess(TestTask taskToAdd, TestTask... currentList) {
+        commandBox.runCommand(taskToAdd.getAddCommand());
 
-        TestTask editedTask = new TaskBuilder().withTitle("Do Homework").withPriority("medium").withTags("assignment","school","work").build();
-
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
+        assertTaskExistedSuccess(taskToAdd, currentList);
     }
 
-    @Test
-    public void edit_clearTags_success() throws Exception {
-        sortTasksList();
-        String detailsToEdit = "tag null";
-        int addressBookIndex = 5;
+    private void assertTaskExistedSuccess(TestTask taskToAdd, TestTask... currentList) {
+        //confirm the new card contains the right data
+        TaskCardHandle addedCard = taskListPanel.navigateToTask(taskToAdd.getTitle().title);
+        assertMatching(taskToAdd, addedCard);
 
-        TestTask taskToEdit = expectedTasksList[addressBookIndex - 1];
-        TestTask editedTask = new TaskBuilder(taskToEdit).withTags().build();
-
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
-    }
-
+        //confirm the list now contains all previous tasks plus the new task
+        TestTask[] expectedList = TestUtil.addTasksToList(currentList, taskToAdd);
+        Arrays.sort(expectedList);
+        assertTrue(taskListPanel.isListMatching(expectedList));
 ```
 ###### /java/guitests/EditCommandTest.java
 ``` java
     @Test
-    public void edit_findThenEdit_success() throws Exception {
-        sortTasksList();
-        commandBox.runCommand("find Do HW 1");
+    public void edit_multipleFields_Success() throws Exception {
+        String detailsToEdit = "title Do Homework from 4pm to 6pm priority low tag assignment";
+        int taskManagerIndex = 3;
 
-        String detailsToEdit = "title Homework due";
-        int filteredTaskListIndex = 1;
-        int addressBookIndex = 2;
+        TestTask editedTask = new TaskBuilder().withTitle("Do Homework").withStart("4pm").withEnd("6pm").withPriority("low").withTags("assignment").build();
 
-        TestTask taskToEdit = expectedTasksList[addressBookIndex - 1];
-        TestTask editedTask = new TaskBuilder(taskToEdit).withTitle("Homework due").build();
-
-        assertEditSuccess(filteredTaskListIndex, addressBookIndex, detailsToEdit, editedTask);
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
     }
 
+    @Test
+    public void edit_multiTags_success() throws Exception {
+        sortTasksList();
+        String detailsToEdit = "tag school tag work tag assignment";
+        int taskManagerIndex = 3;
+
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withTags("school","work","assignment").build();
+
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_dateToNull_success() throws Exception {
+        sortTasksList();
+        String detailsToEdit = "to null";
+        int taskManagerIndex = 5;
+
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).build();
+
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
+    }
+
+    @Test
+    public void edit_Keyword_success() throws Exception {
+        sortTasksList();
+        String detailsToEdit = "title \"today\" tag school";
+        int taskManagerIndex = 5;
+
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
+        TestTask editedTask = new TaskBuilder(taskToEdit).withTitle("today").withTags("school").build();
+
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
+```
+###### /java/guitests/EditCommandTest.java
+``` java
     @Test
     public void edit_notAllFieldsSpecified_failure() {
         sortTasksList();
@@ -74,7 +90,7 @@
     public void edit_missingTaskIndex_failure() {
         sortTasksList();
         commandBox.runCommand("edit title Homework due");
-        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_NOT_EDITED));
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
     }
 
     @Test
@@ -88,25 +104,23 @@
     public void edit_noFieldsSpecified_failure() {
         sortTasksList();
         commandBox.runCommand("edit ");
-        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_NOT_EDITED));
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, EditCommand.MESSAGE_USAGE));
     }
 
     @Test
     public void edit_invalidValues_failure() {
         sortTasksList();
-        //commandBox.runCommand("edit 1 title *&");
-        //assertResultMessage(Title.MESSAGE_TITLE_CONSTRAINTS);
 
         commandBox.runCommand("edit 1 tag *&");
         assertResultMessage(Tag.MESSAGE_TAG_CONSTRAINTS);
 
-        commandBox.runCommand("edit 1 start day");
+        commandBox.runCommand("edit 1 from day");
         assertResultMessage(Date.MESSAGE_DATE_FAIL);
 
-        commandBox.runCommand("edit 1 end day");
+        commandBox.runCommand("edit 1 to day");
         assertResultMessage(Date.MESSAGE_DATE_FAIL);
 
-        commandBox.runCommand("edit 1 priority very high");
+        commandBox.runCommand("edit 1 priority important");
         assertResultMessage(Priority.MESSAGE_PRIORITY_CONSTRAINTS);
     }
 
@@ -121,14 +135,15 @@
      * Checks whether the edited task has the correct updated details.
      *
      * @param filteredTaskListIndex index of task to edit in filtered list
-     * @param addressBookIndex index of task to edit in the task manager.
+     * @param taskManagerIndex index of task to edit in the task manager.
      *      Must refer to the same task as {@code filteredTaskListIndex}
      * @param detailsToEdit details to edit the task with as input to the edit command
      * @param editedTask the expected task after editing the task's details
      */
-    private void assertEditSuccess(int filteredTaskListIndex, int addressBookIndex,
+    private void assertEditSuccess(int filteredTaskListIndex, int taskManagerIndex,
                                     String detailsToEdit, TestTask editedTask) {
         commandBox.runCommand("edit " + filteredTaskListIndex + " " + detailsToEdit);
+
         // confirm the new card contains the right data
         TaskCardHandle editedCard = taskListPanel.navigateToTask(editedTask.getTitle().title);
         assertMatching(editedTask, editedCard);
@@ -136,7 +151,7 @@
         sortTasksList();
 
         // confirm the list now contains all previous tasks plus the task with updated details
-        expectedTasksList[addressBookIndex - 1] = editedTask;
+        expectedTasksList[taskManagerIndex - 1] = editedTask;
         sortTasksList();
         assertTrue(taskListPanel.isListMatching(expectedTasksList));
         assertResultMessage(String.format(EditCommand.MESSAGE_EDIT_TASK_SUCCESS, editedTask));
@@ -145,7 +160,7 @@
 ```
 ###### /java/guitests/FindCommandTest.java
 ``` java
-public class FindCommandTest extends AddressBookGuiTest {
+public class FindCommandTest extends TaskManagerGuiTest {
 
     @Test
     public void find_nonEmptyList() {
@@ -158,6 +173,11 @@ public class FindCommandTest extends AddressBookGuiTest {
     }
 
     @Test
+    public void find_tags() {
+        assertFindResult("find school", td.hw1,td.hw2);
+    }
+
+    @Test
     public void find_emptyList() {
         commandBox.runCommand("clear");
         assertFindResult("find HW"); // no results
@@ -167,7 +187,22 @@ public class FindCommandTest extends AddressBookGuiTest {
     public void find_invalidCommand_fail() {
         commandBox.runCommand("findHW");
         assertResultMessage(Messages.MESSAGE_UNKNOWN_COMMAND);
+
+        commandBox.runCommand("find");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
     }
+
+    @Test
+    public void find_byDate() {
+        //find by time
+        commandBox.runCommand("add date from 3pm to 6pm");
+        assertFindResult("find 6pm", td.date);
+
+        //find by month
+        commandBox.runCommand("add internship by May 30");
+        assertFindResult("find May", td.internship);
+    }
+
 
     private void assertFindResult(String command, TestTask... expectedHits) {
         commandBox.runCommand(command);
@@ -177,42 +212,131 @@ public class FindCommandTest extends AddressBookGuiTest {
     }
 }
 ```
+###### /java/guitests/guihandles/MenuBarPanelHandle.java
+``` java
+/**
+ * Provides a handle for the panel containing the menubar
+ */
+public class MenuBarPanelHandle extends GuiHandle {
+
+    public static final String MENU_HOME = "Home";
+    public static final String MENU_TODAY_TASK = "Today";
+    public static final String MENU_OVERDUE_TASK = "Overdue";
+    public static final String MENU_FLOATING_TASK = "Simple Tasks";
+    public static final String MENU_EVENT_TASK = "Event";
+    public static final String MENU_DEADLINE_TASK = "Deadline";
+
+    public static final int NOT_FOUND = -1;
+    public static final String CARD_PANE_ID = "#menuBarCardPane";
+
+    private static final String MENU_BAR_VIEW_ID = "#menuBarView";
+
+    private final ObservableList<String> menuBarItems = FXCollections.observableArrayList(MENU_HOME, MENU_TODAY_TASK,
+            MENU_OVERDUE_TASK, MENU_FLOATING_TASK, MENU_EVENT_TASK, MENU_DEADLINE_TASK);
+
+    public MenuBarPanelHandle(GuiRobot guiRobot, Stage primaryStage) {
+        super(guiRobot, primaryStage, TestApp.APP_TITLE);
+    }
+
+
+    public ListView<ReadOnlyTask> getListView() {
+        return getNode(MENU_BAR_VIEW_ID);
+    }
+
+    /**
+     * Navigates the menubar view to display relevant task.
+     */
+    public void navigateTo(String menuBarItem) {
+        int index = menuBarItems.indexOf(menuBarItem);
+
+        guiRobot.interact(() -> {
+            getListView().scrollTo(index);
+            guiRobot.sleep(150);
+            getListView().getSelectionModel().select(index);
+        });
+        guiRobot.sleep(550);
+    }
+}
+```
 ###### /java/guitests/ListCommandTest.java
 ``` java
     @Test
-    public void list_floatingTasks_Success() {
-        commandBox.runCommand("list floating");
-        assertListSize(10);
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "floating"));
+    public void list_undoneTasks_Success() {
+		commandBox.runCommand("list undone");
+		assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "undone"));
+		assertListResult(td.getUndoneTypicalTasks());
     }
 
     @Test
-    public void list_eventTasks_Success() {
-        commandBox.runCommand("add task3 from 3pm to 4pm");
-        commandBox.runCommand("list event");
-        assertListSize(1);
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "event"));
+    public void edit_noFieldsSpecified_failure() {
+        commandBox.runCommand("list ");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
     }
 
     @Test
-    public void list_deadlineTasks_Success() {
-        commandBox.runCommand("list deadline");
-        assertListSize(3);
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "deadline"));
+    public void edit_invalidFieldsSpecified_failure() {
+        commandBox.runCommand("list task");
+        assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+    }
+```
+###### /java/guitests/MenuBarPanelTest.java
+``` java
+public class MenuBarPanelTest extends TaskManagerGuiTest {
+
+    public static final String MENU_HOME = "Home";
+    public static final String MENU_TODAY_TASK = "Today";
+    public static final String MENU_OVERDUE_TASK = "Overdue";
+    public static final String MENU_FLOATING_TASK = "Simple Tasks";
+    public static final String MENU_EVENT_TASK = "Event";
+    public static final String MENU_DEADLINE_TASK = "Deadline";
+
+    @Test
+    public void navigateToHomeTasks() {
+        assertMenuBarPanelResult(MENU_HOME, td.getTypicalTasks());
+        assertResultMessage("Listed all tasks");
     }
 
     @Test
-    public void list_alias_Success() {
-        commandBox.runCommand("l deadline");
-        assertListSize(3);
-        assertResultMessage(String.format(ListCommand.MESSAGE_SUCCESS_SPECIFIC, "deadline"));
+    public void navigateToTodayTasks() {
+        assertMenuBarPanelResult(MENU_TODAY_TASK, td.getTodayTasks());//no today task
+        assertResultMessage("There is no incomplete task for today! Great");
     }
 
-	private void assertListResult(TestTask... expectedHits) {
+    @Test
+    public void navigateToOverdueTasks() {
+        commandBox.runCommand("add task3 by 04/04/17");
+        assertMenuBarPanelResult(MENU_OVERDUE_TASK, td.overdue);
+        assertResultMessage("Listed all relevant tasks for overdue");
+
+    }
+
+    @Test
+    public void navigateToFloatingTasks() {
+        assertMenuBarPanelResult(MENU_FLOATING_TASK, td.getTypicalTasks());
+        assertResultMessage("Listed all relevant tasks for floating");
+    }
+
+    @Test
+    public void navigateToEventTasks() {
+        commandBox.runCommand("add date from 3pm to 6pm");
+        assertMenuBarPanelResult(MENU_EVENT_TASK, td.date);
+        assertResultMessage("Listed all relevant tasks for event");
+    }
+
+    @Test
+    public void navigateToDeadlineTasks() {
+        commandBox.runCommand("add project deadline by 11pm");
+        assertMenuBarPanelResult(MENU_DEADLINE_TASK, td.deadline);
+        assertResultMessage("Listed all relevant tasks for deadline");
+    }
+
+    private void assertMenuBarPanelResult(String menuBarItem, TestTask... expectedHits) {
+        menuBarPanel.navigateTo(menuBarItem);
         assertListSize(expectedHits.length);
         Arrays.sort(expectedHits);
         assertTrue(taskListPanel.isListMatching(expectedHits));
     }
+
 }
 ```
 ###### /java/seedu/taskit/testutil/TestTask.java
@@ -237,7 +361,10 @@ public class FindCommandTest extends AddressBookGuiTest {
     }
 
     private boolean checkOverdue() {
-        return this.end.isEndTimePassCurrentTime()== true && isDone == false;
+        if (this.end == null) {
+            return false;
+        }
+        return this.end.isEndTimePassCurrentTime() == true && isDone == false;
     }
 
     @Override
@@ -253,4 +380,13 @@ public class FindCommandTest extends AddressBookGuiTest {
     @Override
     public boolean isDeadline() {
         return this.start.date == null && this.end.date != null;
+```
+###### /java/seedu/taskit/testutil/TypicalTestTasks.java
+``` java
+    public TestTask[] getUndoneTypicalTasks() {
+        return new TestTask[]{hw1, hw2, lunch, interview, shopping, cleaning, gymming};
+    }
+
+    public TestTask[] getTodayTasks() {
+        return new TestTask[]{};
 ```
