--- a/collated/test/A0163996J.md
+++ b/collated/test/A0163996J.md
@@ -4,8 +4,6 @@
 
     public void sortTasksList() {
         Arrays.sort(expectedTasksList);
-    }
-
 ```
 ###### /java/guitests/EditCommandTest.java
 ``` java
@@ -13,37 +11,35 @@
     public void edit_priority_success() throws Exception {
         sortTasksList();
         String detailsToEdit = "priority is high";
-        int addressBookIndex = 4;
-        TestTask taskToEdit = expectedTasksList[addressBookIndex - 1];
+        int taskManagerIndex = 4;
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
         TestTask editedTask = new TaskBuilder(taskToEdit).withPriority("high").build();
 
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
     }
 
     @Test
     public void edit_dateTime_success() throws Exception {
         sortTasksList();
-        String detailsToEdit = "end 4 pm";
-        int addressBookIndex = 5;
+        String detailsToEdit = "to 4 pm";
+        int taskManagerIndex = 5;
 
-        TestTask taskToEdit = expectedTasksList[addressBookIndex - 1];
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
         TestTask editedTask = new TaskBuilder(taskToEdit).withEnd("4pm").build();
 
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
     }
 
     @Test
     public void edit_dateToday_success() throws Exception {
         sortTasksList();
-        String detailsToEdit = "end today";
-        int addressBookIndex = 4;
+        String detailsToEdit = "to today";
+        int taskManagerIndex = 4;
 
-        TestTask taskToEdit = expectedTasksList[addressBookIndex - 1];
+        TestTask taskToEdit = expectedTasksList[taskManagerIndex - 1];
         TestTask editedTask = new TaskBuilder(taskToEdit).withEnd("today").build();
 
-        assertEditSuccess(addressBookIndex, addressBookIndex, detailsToEdit, editedTask);
-    }
-
+        assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
 ```
 ###### /java/seedu/taskit/logic/LogicManagerTest.java
 ``` java
@@ -215,13 +211,14 @@ public class TestTask implements ReadOnlyTask, Comparable<TestTask> {
 package seedu.taskit.testutil;
 
 import seedu.taskit.commons.exceptions.IllegalValueException;
-import seedu.taskit.model.AddressBook;
+import seedu.taskit.model.TaskManager;
 import seedu.taskit.model.task.Task;
 import seedu.taskit.model.task.UniqueTaskList;
 import seedu.taskit.model.task.Date;
 
 public class TypicalTestTasks {
-    public TestTask hw1, hw2, lunch, interview, meeting, shopping, assignment, cleaning, gymming, golfing;
+    public TestTask hw1, hw2, lunch, interview, meeting, shopping, assignment, cleaning,
+    gymming, golfing, today, to, from, date,deadline, internship, overdue;
 
     public TypicalTestTasks() {
         try {
@@ -240,4 +237,59 @@ public class TypicalTestTasks {
             shopping = new TaskBuilder().withTitle("Shopping with friends")
                     .withPriority("low")
                     .withTags("leisure", "friends").build();
+            cleaning = new TaskBuilder().withTitle("Clean room")
+                    .withPriority("low")
+                    .withTags("home").withDone("done").build();
+            gymming = new TaskBuilder().withTitle("Go to the gym")
+                    .withPriority("low")
+                    .withTags("health").withDone("done").build();
+
+            // Manually added
+            meeting = new TaskBuilder().withTitle("Software Engineering Meeting")
+                    .withPriority("low")
+                    .withTags("school").build();
+            assignment = new TaskBuilder().withTitle("CS3230 Assignment")
+                    .withPriority("low")
+                    .withTags("school").build();
+            golfing = new TaskBuilder().withTitle("Golf with Cher")
+                    .withPriority("medium")
+                    .withTags("school").withEnd(new Date("today")).build();
+            today = new TaskBuilder().withTitle("today movie night")
+                    .withPriority("low")
+                    .withTags("leisure").build();
+            to = new TaskBuilder().withTitle("to")
+                    .withPriority("low")
+                    .withTags("testing").build();
+            from = new TaskBuilder().withTitle("from")
+                    .withPriority("low").withEnd("3pm")
+                    .withTags("testing").build();
+            date = new TaskBuilder().withTitle("date")
+                    .withPriority("low").withStart("3pm")
+                    .withEnd("6pm").build();
+            deadline = new TaskBuilder().withTitle("project deadline")
+                    .withPriority("low")
+                    .withEnd("11pm").build();
+            internship = new TaskBuilder().withTitle("internship")
+                    .withPriority("low")
+                    .withEnd("May 30").build();
+            overdue = new TaskBuilder().withTitle("task3")
+                    .withPriority("low")
+                    .withEnd("Apr 1").build();
+
+        } catch (IllegalValueException e) {
+            e.printStackTrace();
+            assert false : "not possible";
+        }
+    }
+
+    public static void loadAddressBookWithSampleData(TaskManager ab) {
+        for (TestTask task : new TypicalTestTasks().getTypicalTasks()) {
+            try {
+                ab.addTask(new Task(task));
+            } catch (UniqueTaskList.DuplicateTaskException e) {
+                assert false : "not possible";
+            }
+        }
+    }
+
 ```
