--- a/collated/main/A0141011J.md
+++ b/collated/main/A0141011J.md
@@ -1,11 +1,6 @@
 # A0141011J
 ###### /java/seedu/taskit/commons/events/storage/StorageFilePathChangedEvent.java
 ``` java
-
-package seedu.taskit.commons.events.storage;
-
-import seedu.taskit.commons.events.BaseEvent;
-
 /** Indicates the TaskManager in the model has changed*/
 public class StorageFilePathChangedEvent extends BaseEvent {
 
@@ -26,9 +21,6 @@ public class StorageFilePathChangedEvent extends BaseEvent {
 ```
 ###### /java/seedu/taskit/commons/exceptions/NoValidStateException.java
 ``` java
-
-package seedu.taskit.commons.exceptions;
-
 /**
  * Represents an error when there are no valid state to restore to
  *
@@ -40,28 +32,11 @@ public class NoValidStateException extends Exception {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/AddCommand.java
-``` java
-    @Override
-    public boolean isUndoable() {
-        return true;
-    }
-
-}
-```
 ###### /java/seedu/taskit/logic/commands/ChangePathCommand.java
 ``` java
-
-package seedu.taskit.logic.commands;
-
-import java.nio.file.Paths;
-import java.util.logging.Logger;
-
-import seedu.taskit.commons.core.EventsCenter;
-import seedu.taskit.commons.core.LogsCenter;
-import seedu.taskit.commons.events.storage.StorageFilePathChangedEvent;
-import seedu.taskit.logic.commands.CommandResult;
-
+/**
+ * Specify a specific folder to change storage file path to
+ */
 public class ChangePathCommand extends Command {
     private Logger logger = LogsCenter.getLogger(ChangePathCommand.class.getName());
 
@@ -76,21 +51,43 @@ public class ChangePathCommand extends Command {
             + "Parameters: FILEPATH (must be a string)\n"
             + "Example: " + COMMAND_WORD + "newfolder";
 
-    private String newFilePath;
+    private static Config config;
+    private String newFilePath, oldFilePath;
+    private ReadOnlyTaskManager taskManager;
+    private static Storage storage;
 
     public ChangePathCommand(String newPath) {
+        this.oldFilePath = config.getAddressBookFilePath();
+        logger.info("Old file path: " + oldFilePath);
+
         newFilePath = newPath.trim().replace("\\", "/") + "/taskit.xml";
         logger.info("New file path: " + this.newFilePath);
     }
 
-    public CommandResult execute() {
-        EventsCenter.getInstance().post(new StorageFilePathChangedEvent(newFilePath));
-        return new CommandResult(String.format(MESSAGE_SUCCESS + Paths.get(newFilePath).toAbsolutePath()));
+    public static void setConfig(Config c) {
+        config = c;
     }
 
-    @Override
-    public boolean isUndoable() {
-        return true;
+    public static void setStorage(Storage s) {
+        storage = s;
+    }
+
+    public CommandResult execute() {
+        assert config != null;
+        taskManager = model.getAddressBook();
+
+        try {
+            storage.saveAddressBook(taskManager, newFilePath);
+        } catch (Exception e) {
+            return new CommandResult(MESSAGE_INVALID_PATH);
+        }
+
+        config.setAddressBookFilePath(newFilePath);
+
+        model.updateFilteredListToShowAll();
+
+        EventsCenter.getInstance().post(new StorageFilePathChangedEvent(newFilePath));
+        return new CommandResult(String.format(MESSAGE_SUCCESS + Paths.get(newFilePath)));
     }
 }
 ```
@@ -119,16 +116,6 @@ public class ChangePathCommand extends Command {
 ```
 ###### /java/seedu/taskit/logic/commands/DeleteCommand.java
 ``` java
-
-package seedu.taskit.logic.commands;
-
-import seedu.taskit.commons.core.Messages;
-import seedu.taskit.commons.core.UnmodifiableObservableList;
-import seedu.taskit.logic.commands.exceptions.CommandException;
-import seedu.taskit.model.task.ReadOnlyTask;
-import seedu.taskit.model.task.UniqueTaskList.TaskNotFoundException;
-
-
 /**
  * Deletes a task identified using it's last displayed index from TaskIt.
  */
@@ -203,11 +190,9 @@ public class DeleteCommand extends Command {
 ```
 ###### /java/seedu/taskit/logic/commands/RedoCommand.java
 ``` java
-
-package seedu.taskit.logic.commands;
-
-import seedu.taskit.commons.exceptions.NoValidStateException;
-
+/**
+ * Redo the previously undone command
+ */
 public class RedoCommand extends Command {
 
     public static final String COMMAND_WORD = "redo";
@@ -233,14 +218,8 @@ public class RedoCommand extends Command {
 ```
 ###### /java/seedu/taskit/logic/commands/SaveCommand.java
 ``` java
-package seedu.taskit.logic.commands;
-
-import java.io.IOException;
-
-import seedu.taskit.storage.XmlAddressBookStorage;
-
 /**
- * Specify a specific folder and a file for data storage
+ * Specify a specific folder and a file to output data file
  */
 public class SaveCommand extends Command{
 
@@ -255,7 +234,7 @@ public class SaveCommand extends Command{
             + "Parameters: FILEPATH (must be a string)\n"
             + "Example: " + COMMAND_WORD + " newFile.txt";
 
-    public static final String MESSAGE_SAVE_SUCCESS = "Saved to ";
+    public static final String MESSAGE_SAVE_SUCCESS = "Saved to";
 
     private String newFilePath;
 
@@ -280,13 +259,29 @@ public class SaveCommand extends Command{
 
 }
 ```
+###### /java/seedu/taskit/logic/commands/SelectCommand.java
+``` java
+    @Override
+    public CommandResult execute() throws CommandException {
+
+        UnmodifiableObservableList<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+
+        if (lastShownList.size() < targetIndex) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
+
+        EventsCenter.getInstance().post(new JumpToListRequestEvent(targetIndex - 1));
+        ReadOnlyTask selected = lastShownList.get(targetIndex - 1);
+        return new CommandResult(String.format(MESSAGE_SELECT_TASK_SUCCESS, selected.getTitle()));
+    }
+
+}
+```
 ###### /java/seedu/taskit/logic/commands/UndoCommand.java
 ``` java
-
-package seedu.taskit.logic.commands;
-
-import seedu.taskit.commons.exceptions.NoValidStateException;
-
+/**
+ * Undo the last undoable command.
+ */
 public class UndoCommand extends Command{
 
     public static final String COMMAND_WORD = "undo";
@@ -314,35 +309,10 @@ public class UndoCommand extends Command{
     }
 }
 ```
-###### /java/seedu/taskit/logic/LogicManager.java
-``` java
-    @Override
-    public CommandResult execute(String commandText) throws CommandException {
-        logger.info("----------------[USER COMMAND][" + commandText + "]");
-        Command command = parser.parseCommand(commandText);
-        command.setData(model);
-        //commandList.addCommand(command);
-        //command.setCommandHistory(commandList);
-        if (command.isUndoable()) {
-            model.save();
-        }
-        return command.execute();
-    }
-```
 ###### /java/seedu/taskit/logic/parser/ChangePathCommandParser.java
 ``` java
-package seedu.taskit.logic.parser;
-
-import static seedu.taskit.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
-
-import java.util.Optional;
-
-import seedu.taskit.logic.commands.ChangePathCommand;
-import seedu.taskit.logic.commands.Command;
-import seedu.taskit.logic.commands.IncorrectCommand;
-
 /**
- * Parses input arguments and creates a new DeleteCommand object
+ * Parses input arguments and creates a new ChangePathCommand object
  */
 public class ChangePathCommandParser {
 
@@ -363,18 +333,8 @@ public class ChangePathCommandParser {
 ```
 ###### /java/seedu/taskit/logic/parser/SaveCommandParser.java
 ``` java
-package seedu.taskit.logic.parser;
-
-import static seedu.taskit.commons.core.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
-
-import java.util.Optional;
-
-import seedu.taskit.logic.commands.Command;
-import seedu.taskit.logic.commands.SaveCommand;
-import seedu.taskit.logic.commands.IncorrectCommand;
-
 /**
- * Parses input arguments and creates a new DeleteCommand object
+ * Parses input arguments and creates a new SaveCommand object
  */
 public class SaveCommandParser {
 
@@ -406,7 +366,7 @@ public class SaveCommandParser {
         try {
             ConfigUtil.saveConfig(config, Config.DEFAULT_CONFIG_FILE);
 
-            ReadOnlyAddressBook currentTaskManager = model.getAddressBook();
+            ReadOnlyTaskManager currentTaskManager = model.getAddressBook();
 
             //reset the storage object to the new file path and save the current task manager into it
             storage = new StorageManager(config.getAddressBookFilePath(), config.getUserPrefsFilePath());
@@ -431,6 +391,7 @@ public class SaveCommandParser {
 
     /** Records the current state of the model */
     void save();
+
 }
 ```
 ###### /java/seedu/taskit/model/ModelManager.java
@@ -438,11 +399,11 @@ public class SaveCommandParser {
     //========== Inner classes/functions used for filtering =================================================
 
     private static class State {
-        final ReadOnlyAddressBook data;
+        final ReadOnlyTaskManager data;
         final Predicate<? super ReadOnlyTask> filterPredicate;
 
         public State(ModelManager mm) {
-            data = new AddressBook(mm.getAddressBook());
+            data = new TaskManager(mm.getAddressBook());
             filterPredicate = mm.filteredTasks.getPredicate();
         }
     }
@@ -617,6 +578,40 @@ public interface ReadOnlyTask {
     }
 
 ```
+###### /java/seedu/taskit/ui/StatusBarFooter.java
+``` java
+    @Subscribe
+    public void handleStorageFilePathChangedEvent(StorageFilePathChangedEvent event) {
+        setSaveLocation(event.getPath());
+    }
+}
+```
+###### /java/seedu/taskit/ui/TaskCard.java
+``` java
+public class TaskCard extends UiPart<Region> {
+
+    private static final String FXML = "TaskListCard.fxml";
+
+    @FXML
+    private Rectangle overdue;
+    @FXML
+    private HBox cardPane;
+    @FXML
+    private Label title;
+    @FXML
+    private Label start;
+    @FXML
+    private Label end;
+    @FXML
+    private Label id;
+    @FXML
+    private Circle priority_shape;
+    @FXML
+    private Label priority;
+    @FXML
+    private FlowPane tags;
+
+```
 ###### /java/seedu/taskit/ui/TaskCard.java
 ``` java
     public TaskCard(ReadOnlyTask task, int displayedIndex) {
@@ -755,6 +750,7 @@ public interface ReadOnlyTask {
             <RowConstraints />
          </rowConstraints>
         </GridPane>
+      <Pane prefHeight="80.0" prefWidth="54.0" />
       <StackPane prefHeight="25.0" prefWidth="35.0">
          <children>
               <Circle fx:id="priority_shape" fill="#ffffff00" radius="20.0" stroke="#000000" strokeType="INSIDE" strokeWidth="4.0" StackPane.alignment="CENTER">
